[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,20 @@
 <html>
+    <head>
+        <title>Article One | Jithin Jose</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <div>
+            <h3>Article One</h3>
+        </div>
+        <div>
+            <p>This is the content for the first article. This is the content for the first article. This is the content for the first article. This is the content for the first article.</p>
+            <p>This is the content for the first article. This is the content for the first article. This is the content for the first article. This is the content for the first article.</p>
+            <p>This is the content for the first article. This is the content for the first article. This is the content for the first article. This is the content for the first article.</p>
+            <p>This is the content for the first article. This is the content for the first article. This is the content for the first article. This is the content for the first article.</p>
+        </div>
+    </body>
 </html>
