[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,9 @@
         </div>
         <hr/>
         <div>
+            Sep 21, 2016
+        </div>
+        <div>
             <h3>Article One</h3>
         </div>
         <div>
