--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,23 +2,26 @@
     <head>
         <title>Article Two | Jithin Jose</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <div>
-            Sep 21, 2016
-        </div>
-        <div>
-            <h3>Article Two</h3>
-        </div>
-        <div>
-            <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
-            <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
-            <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
-            <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <div>
+                Sep 21, 2016
+            </div>
+            <div>
+                <h3>Article Two</h3>
+            </div>
+            <div>
+                <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
+                <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
+                <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
+                <p>This is the content for the Second article. This is the content for the Second article. This is the content for the Second article. This is the content for the Second article.</p>
+            </div>
         </div>
     </body>
 </html>
