[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am Jithin and this is my webapp.
             <h1>This First main heading in this page </h1>
         </div>
+        <script>
+            alert('Hi I am Jithin');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
