[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,16 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img src="https://www.ricoh.com/r_dc/r/r8/img/sample_10.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold">
+                Hi! I am Jithin and this is my webapp.
+                <h3>This First main heading in this page </h3>
+            </div>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Jithin and this is my webapp.
-            <h3>This First main heading in this page </h3>
-        </div>
-        <script>
-            alert('Hi I am Jithin');
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
