[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,10 +8,18 @@
             <div class="center">
                 <img src="https://www.ricoh.com/r_dc/r/r8/img/sample_10.jpg" class="img-medium"/>
             </div>
-            <br>
-            <div class="center text-big bold">
-                Hi! I am Jithin and this is my webapp.
-                <h3>This First main heading in this page </h3>
+            <hr/>
+            <br/>
+            <h3>Personal</h3>
+            <div>
+                My Name is Jithin Jose
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I work as Systems Analyst
+            </div>
+            <div class="footer">
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
