--- a/ui/index.html
+++ b/ui/index.html
@@ -22,11 +22,8 @@
                 This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times
                 <br/>
                 <input type="text" id="name" placeholder="name" />
-                <input type="submit" id="submit" />
-                <ul>
-                    <li>name1</li>
-                    <li>name2</li>
-                    <li>name3</li>
+                <input type="submit" id="btn_submit" value="submit" />
+                <ul id="nameList">
                 </ul>
             </div>
         </div>
